--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(89deg, #A8C0FF 0%, #3F2B96 100%)
+  /* background: linear-gradient(89deg, #4A707A 0%, #DDDDDA 100%) */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button {
+  cursor: pointer;
 }
